calendar z-index fixed

--- a/react-app/src/components/MyCalendar/index.css
+++ b/react-app/src/components/MyCalendar/index.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 5%;
     right: 5%;
-    z-index: -1;
+    z-index: 1;
 }
 
 .eventTitle, .dailyEventTitle {
